{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 175,
  "lineage": "42c9d961-01f1-274d-fb00-42f10cdffa09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074bcdffd82009db8",
            "arn": "arn:aws:ec2:us-east-1:091869721157:elastic-ip/eipalloc-074bcdffd82009db8",
            "association_id": "eipassoc-0a2c85504636bff38",
            "domain": "vpc",
            "id": "eipalloc-074bcdffd82009db8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a19b98f85da6182f",
            "private_dns": "ip-10-0-1-41.ec2.internal",
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-184-73-255-90.compute-1.amazonaws.com",
            "public_ip": "184.73.255.90",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-nat-eip",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-nat-eip",
              "Project": "blacktickets"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "eipalloc-074bcdffd82009db8",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:internet-gateway/igw-02e66748acf802549",
            "id": "igw-02e66748acf802549",
            "owner_id": "091869721157",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-igw",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-igw",
              "Project": "blacktickets"
            },
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "igw-02e66748acf802549",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-private-alb/0278e57cf3e82698",
            "arn_suffix": "app/blacktickets-dev-private-alb/0278e57cf3e82698",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-blacktickets-dev-private-alb-1223796737.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-private-alb/0278e57cf3e82698",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blacktickets-dev-private-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0b890d97bf0a0c205"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d4d03d4b66828ec"
              },
              {
                "subnet_id": "subnet-0c1abec4a36d722dc"
              }
            ],
            "subnets": [
              "subnet-06d4d03d4b66828ec",
              "subnet-0c1abec4a36d722dc"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-alb",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-alb",
              "Project": "blacktickets"
            },
            "vpc_id": "vpc-086a5e59000af6f38",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-private-alb/0278e57cf3e82698"
          },
          "dependencies": [
            "aws_security_group.private_alb",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-public-alb/f1054844ac8f9d95",
            "arn_suffix": "app/blacktickets-dev-public-alb/f1054844ac8f9d95",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "blacktickets-dev-public-alb-49050539.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-public-alb/f1054844ac8f9d95",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blacktickets-dev-public-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0825596952b78fc5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ee3e7f89d27ea31"
              },
              {
                "subnet_id": "subnet-08ad07e63fe464e4c"
              }
            ],
            "subnets": [
              "subnet-07ee3e7f89d27ea31",
              "subnet-08ad07e63fe464e4c"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-alb",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-alb",
              "Project": "blacktickets"
            },
            "vpc_id": "vpc-086a5e59000af6f38",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-public-alb/f1054844ac8f9d95"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-private-alb/0278e57cf3e82698",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-http-listener",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-http-listener",
              "Project": "blacktickets"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640"
          },
          "dependencies": [
            "aws_lb.private",
            "aws_security_group.private_alb",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-public-alb/f1054844ac8f9d95/f6114e13668ac7f3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-frontend-tg/3572a6cfc703e480",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-public-alb/f1054844ac8f9d95/f6114e13668ac7f3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-public-alb/f1054844ac8f9d95",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-http-listener",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-http-listener",
              "Project": "blacktickets"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-public-alb/f1054844ac8f9d95/f6114e13668ac7f3"
          },
          "dependencies": [
            "aws_lb.public",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-identity-tg/7068144c3634db54",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/7e12d5e035159bcd",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/auth/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/7e12d5e035159bcd",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/7e12d5e035159bcd"
          },
          "dependencies": [
            "aws_lb.private",
            "aws_lb_listener.private_http",
            "aws_lb_target_group.identity",
            "aws_security_group.private_alb",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "bookings",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-booking-tg/3185c7710cd3bed7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/1499c82bf4912772",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/bookings",
                      "/bookings/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/1499c82bf4912772",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640",
            "priority": 40,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/1499c82bf4912772"
          },
          "dependencies": [
            "aws_lb.private",
            "aws_lb_listener.private_http",
            "aws_lb_target_group.booking",
            "aws_security_group.private_alb",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "chatbot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-chatbot-tg/082778350a4f073a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/b96ac71fa0b1ee76",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/chatbot/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/b96ac71fa0b1ee76",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640",
            "priority": 50,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/b96ac71fa0b1ee76"
          },
          "dependencies": [
            "aws_lb.private",
            "aws_lb_listener.private_http",
            "aws_lb_target_group.chatbot",
            "aws_security_group.private_alb",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "events",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-event-tg/057999f31ad0b20a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/a9ea0329c34d110e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/events",
                      "/events/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/a9ea0329c34d110e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640",
            "priority": 30,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/a9ea0329c34d110e"
          },
          "dependencies": [
            "aws_lb.private",
            "aws_lb_listener.private_http",
            "aws_lb_target_group.event",
            "aws_security_group.private_alb",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "users",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-identity-tg/7068144c3634db54",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/3c83f9f08f5d6862",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/users/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/3c83f9f08f5d6862",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640",
            "priority": 20,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:listener-rule/app/blacktickets-dev-private-alb/0278e57cf3e82698/7d465398e41d7640/3c83f9f08f5d6862"
          },
          "dependencies": [
            "aws_lb.private",
            "aws_lb_listener.private_http",
            "aws_lb_target_group.identity",
            "aws_security_group.private_alb",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "booking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-booking-tg/3185c7710cd3bed7",
            "arn_suffix": "targetgroup/blacktickets-dev-booking-tg/3185c7710cd3bed7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-booking-tg/3185c7710cd3bed7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-private-alb/0278e57cf3e82698"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blacktickets-dev-booking-tg",
            "port": 4003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-booking-tg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-booking-tg",
              "Project": "blacktickets"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-booking-tg/3185c7710cd3bed7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chatbot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-chatbot-tg/082778350a4f073a",
            "arn_suffix": "targetgroup/blacktickets-dev-chatbot-tg/082778350a4f073a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-chatbot-tg/082778350a4f073a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-private-alb/0278e57cf3e82698"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blacktickets-dev-chatbot-tg",
            "port": 4004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-chatbot-tg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-chatbot-tg",
              "Project": "blacktickets"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-chatbot-tg/082778350a4f073a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "event",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-event-tg/057999f31ad0b20a",
            "arn_suffix": "targetgroup/blacktickets-dev-event-tg/057999f31ad0b20a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-event-tg/057999f31ad0b20a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-private-alb/0278e57cf3e82698"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blacktickets-dev-event-tg",
            "port": 4002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-event-tg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-event-tg",
              "Project": "blacktickets"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-event-tg/057999f31ad0b20a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-frontend-tg/3572a6cfc703e480",
            "arn_suffix": "targetgroup/blacktickets-dev-frontend-tg/3572a6cfc703e480",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-frontend-tg/3572a6cfc703e480",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-public-alb/f1054844ac8f9d95"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blacktickets-dev-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-frontend-tg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-frontend-tg",
              "Project": "blacktickets"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-frontend-tg/3572a6cfc703e480"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "identity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-identity-tg/7068144c3634db54",
            "arn_suffix": "targetgroup/blacktickets-dev-identity-tg/7068144c3634db54",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-identity-tg/7068144c3634db54",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:091869721157:loadbalancer/app/blacktickets-dev-private-alb/0278e57cf3e82698"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blacktickets-dev-identity-tg",
            "port": 4001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-identity-tg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-identity-tg",
              "Project": "blacktickets"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091869721157:targetgroup/blacktickets-dev-identity-tg/7068144c3634db54"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074bcdffd82009db8",
            "association_id": "eipassoc-0a2c85504636bff38",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02a6664e5ac1203ad",
            "network_interface_id": "eni-0a19b98f85da6182f",
            "private_ip": "10.0.1.41",
            "public_ip": "184.73.255.90",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07ee3e7f89d27ea31",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-nat-gateway",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-nat-gateway",
              "Project": "blacktickets"
            },
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "nat-02a6664e5ac1203ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_default_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00a33ee741c0f4b261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02a6664e5ac1203ad",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-00a33ee741c0f4b26",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-00a33ee741c0f4b26"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d8ed62600f4afa161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02a6664e5ac1203ad",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0d8ed62600f4afa16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0d8ed62600f4afa16"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:route-table/rtb-00a33ee741c0f4b26",
            "id": "rtb-00a33ee741c0f4b26",
            "owner_id": "091869721157",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a6664e5ac1203ad",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-app-rt-1",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-app-rt-1",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtb-00a33ee741c0f4b26",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:route-table/rtb-0d8ed62600f4afa16",
            "id": "rtb-0d8ed62600f4afa16",
            "owner_id": "091869721157",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a6664e5ac1203ad",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-app-rt-2",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-app-rt-2",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtb-0d8ed62600f4afa16",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:route-table/rtb-04ddcc20f033ba100",
            "id": "rtb-04ddcc20f033ba100",
            "owner_id": "091869721157",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-db-rt-1",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-db-rt-1",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtb-04ddcc20f033ba100",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.private_db",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:route-table/rtb-0c35ea7e0ca77f9e0",
            "id": "rtb-0c35ea7e0ca77f9e0",
            "owner_id": "091869721157",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-db-rt-2",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-db-rt-2",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtb-0c35ea7e0ca77f9e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.private_db",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:route-table/rtb-02c646f3747304d31",
            "id": "rtb-02c646f3747304d31",
            "owner_id": "091869721157",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e66748acf802549",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-rt",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-rt",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtb-02c646f3747304d31",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002709c65db4a608c",
            "region": "us-east-1",
            "route_table_id": "rtb-00a33ee741c0f4b26",
            "subnet_id": "subnet-0c1abec4a36d722dc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtbassoc-002709c65db4a608c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02589cd540c41c06b",
            "region": "us-east-1",
            "route_table_id": "rtb-0d8ed62600f4afa16",
            "subnet_id": "subnet-06d4d03d4b66828ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtbassoc-02589cd540c41c06b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0372151735ea24744",
            "region": "us-east-1",
            "route_table_id": "rtb-04ddcc20f033ba100",
            "subnet_id": "subnet-0021137a192e9efb3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtbassoc-0372151735ea24744",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee056d1b31058e72",
            "region": "us-east-1",
            "route_table_id": "rtb-0c35ea7e0ca77f9e0",
            "subnet_id": "subnet-09a126839c35a7626"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtbassoc-0ee056d1b31058e72",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03298a73e7bad2963",
            "region": "us-east-1",
            "route_table_id": "rtb-02c646f3747304d31",
            "subnet_id": "subnet-07ee3e7f89d27ea31"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtbassoc-03298a73e7bad2963",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041c0a4d859f24c5b",
            "region": "us-east-1",
            "route_table_id": "rtb-02c646f3747304d31",
            "subnet_id": "subnet-08ad07e63fe464e4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "rtbassoc-041c0a4d859f24c5b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:security-group/sg-0825596952b78fc5b",
            "description": "Allow public HTTP and HTTPS traffic to the public ALB.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound to app targets",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0825596952b78fc5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from allowed CIDRs",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from allowed CIDRs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "blacktickets-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "091869721157",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-alb-sg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-alb-sg",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "sg-0825596952b78fc5b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:security-group/sg-0b9537c4caaa723d0",
            "description": "Allow ALB traffic to EC2 application instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound application traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9537c4caaa723d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend service traffic from private ALB",
                "from_port": 4001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b890d97bf0a0c205"
                ],
                "self": false,
                "to_port": 4004
              },
              {
                "cidr_blocks": [],
                "description": "Frontend traffic from public ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0825596952b78fc5b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "blacktickets-dev-ec2-app-sg",
            "name_prefix": "",
            "owner_id": "091869721157",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ec2-app-sg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ec2-app-sg",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "sg-0b9537c4caaa723d0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:security-group/sg-0b890d97bf0a0c205",
            "description": "Allow HTTP from app instances to the private ALB.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Backend service traffic to app instances",
                "from_port": 4001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9537c4caaa723d0"
                ],
                "self": false,
                "to_port": 4004
              }
            ],
            "id": "sg-0b890d97bf0a0c205",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from app instances",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9537c4caaa723d0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "blacktickets-dev-private-alb-sg",
            "name_prefix": "",
            "owner_id": "091869721157",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-alb-sg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-alb-sg",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "sg-0b890d97bf0a0c205",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:security-group/sg-0b1a323651a4c5fb5",
            "description": "Allow PostgreSQL traffic from EC2 application instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound database traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1a323651a4c5fb5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from app instances",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9537c4caaa723d0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "blacktickets-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "091869721157",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-rds-sg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-rds-sg",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "sg-0b1a323651a4c5fb5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:security-group/sg-067422c4f704caa35",
            "description": "Allow HTTPS from app instances to interface VPC endpoints.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound endpoint traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067422c4f704caa35",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from app instances",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9537c4caaa723d0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "blacktickets-dev-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "091869721157",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-vpc-endpoints-sg",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-vpc-endpoints-sg",
              "Project": "blacktickets"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "sg-067422c4f704caa35",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:subnet/subnet-0c1abec4a36d722dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1abec4a36d722dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091869721157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-app-1",
              "Project": "blacktickets",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-app-1",
              "Project": "blacktickets",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "subnet-0c1abec4a36d722dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:subnet/subnet-06d4d03d4b66828ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d4d03d4b66828ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091869721157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-app-2",
              "Project": "blacktickets",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-app-2",
              "Project": "blacktickets",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "subnet-06d4d03d4b66828ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:subnet/subnet-0021137a192e9efb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0021137a192e9efb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091869721157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-db-1",
              "Project": "blacktickets",
              "Tier": "private-db"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-db-1",
              "Project": "blacktickets",
              "Tier": "private-db"
            },
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "subnet-0021137a192e9efb3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:subnet/subnet-09a126839c35a7626",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a126839c35a7626",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091869721157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-db-2",
              "Project": "blacktickets",
              "Tier": "private-db"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-private-db-2",
              "Project": "blacktickets",
              "Tier": "private-db"
            },
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "subnet-09a126839c35a7626",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:subnet/subnet-07ee3e7f89d27ea31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ee3e7f89d27ea31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091869721157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-1",
              "Project": "blacktickets",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-1",
              "Project": "blacktickets",
              "Tier": "public"
            },
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "subnet-07ee3e7f89d27ea31",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:subnet/subnet-08ad07e63fe464e4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ad07e63fe464e4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091869721157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-2",
              "Project": "blacktickets",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-public-2",
              "Project": "blacktickets",
              "Tier": "public"
            },
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "subnet-08ad07e63fe464e4c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:vpc/vpc-086a5e59000af6f38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5501562feb5ff0a",
            "default_route_table_id": "rtb-0745e3fd63cc17f31",
            "default_security_group_id": "sg-09134b56f5d9ddda2",
            "dhcp_options_id": "dopt-0aa8e2880af035515",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086a5e59000af6f38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0745e3fd63cc17f31",
            "owner_id": "091869721157",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-vpc",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-vpc",
              "Project": "blacktickets"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "vpc-086a5e59000af6f38",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:vpc-endpoint/vpce-0b4fab68b58493c0c",
            "dns_entry": [
              {
                "dns_name": "vpce-0b4fab68b58493c0c-lbckutej.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b4fab68b58493c0c-lbckutej-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b4fab68b58493c0c-lbckutej-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05738861ZM6W4HLPL9X7"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05916183KTJOADQJ92YN"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z05743692LVDP57DDMX7H"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z05904443N3WPFJKTO8DE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b4fab68b58493c0c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04d76a2282bfa49f3",
              "eni-09d7b0bedb2884210"
            ],
            "owner_id": "091869721157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-067422c4f704caa35"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.135",
                "subnet_id": "subnet-0c1abec4a36d722dc"
              },
              {
                "ipv4": "10.0.12.199",
                "subnet_id": "subnet-06d4d03d4b66828ec"
              }
            ],
            "subnet_ids": [
              "subnet-06d4d03d4b66828ec",
              "subnet-0c1abec4a36d722dc"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-logs-endpoint",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-logs-endpoint",
              "Project": "blacktickets"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "vpce-0b4fab68b58493c0c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:vpc-endpoint/vpce-0cc2733ee7c7d71e3",
            "dns_entry": [
              {
                "dns_name": "vpce-0cc2733ee7c7d71e3-ghgem3rl.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cc2733ee7c7d71e3-ghgem3rl-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cc2733ee7c7d71e3-ghgem3rl-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05912603QWOBHFOGGK8L"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cc2733ee7c7d71e3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e536b93cc92756d",
              "eni-07845b8c9b72c38c6"
            ],
            "owner_id": "091869721157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-067422c4f704caa35"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.234",
                "subnet_id": "subnet-0c1abec4a36d722dc"
              },
              {
                "ipv4": "10.0.12.83",
                "subnet_id": "subnet-06d4d03d4b66828ec"
              }
            ],
            "subnet_ids": [
              "subnet-06d4d03d4b66828ec",
              "subnet-0c1abec4a36d722dc"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ec2messages-endpoint",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ec2messages-endpoint",
              "Project": "blacktickets"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "vpce-0cc2733ee7c7d71e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:vpc-endpoint/vpce-0c79d2a39a460e2d6",
            "dns_entry": [
              {
                "dns_name": "vpce-0c79d2a39a460e2d6-uas57vac.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c79d2a39a460e2d6-uas57vac-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c79d2a39a460e2d6-uas57vac-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05919323RJ9VTOZSU1BV"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z029702726FTGJT63U0JV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c79d2a39a460e2d6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02aac457267becc6a",
              "eni-03801b8bb6b639626"
            ],
            "owner_id": "091869721157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-067422c4f704caa35"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.93",
                "subnet_id": "subnet-0c1abec4a36d722dc"
              },
              {
                "ipv4": "10.0.12.37",
                "subnet_id": "subnet-06d4d03d4b66828ec"
              }
            ],
            "subnet_ids": [
              "subnet-06d4d03d4b66828ec",
              "subnet-0c1abec4a36d722dc"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ecr-api-endpoint",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ecr-api-endpoint",
              "Project": "blacktickets"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "vpce-0c79d2a39a460e2d6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:vpc-endpoint/vpce-0ff8f6d241c937c86",
            "dns_entry": [
              {
                "dns_name": "vpce-0ff8f6d241c937c86-z68sqpl8.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ff8f6d241c937c86-z68sqpl8-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ff8f6d241c937c86-z68sqpl8-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0580240UYV0N42J2Q2U"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0580240UYV0N42J2Q2U"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z05806461IIMJLPM1YER5"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z05806461IIMJLPM1YER5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ff8f6d241c937c86",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04c4c02a842737ace",
              "eni-0c1c1d1d84671d6db"
            ],
            "owner_id": "091869721157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-067422c4f704caa35"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.183",
                "subnet_id": "subnet-0c1abec4a36d722dc"
              },
              {
                "ipv4": "10.0.12.27",
                "subnet_id": "subnet-06d4d03d4b66828ec"
              }
            ],
            "subnet_ids": [
              "subnet-06d4d03d4b66828ec",
              "subnet-0c1abec4a36d722dc"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ecr-dkr-endpoint",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ecr-dkr-endpoint",
              "Project": "blacktickets"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "vpce-0ff8f6d241c937c86",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:vpc-endpoint/vpce-04af200fb233e8ecf",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04af200fb233e8ecf",
            "ip_address_type": "ipv4",
            "owner_id": "091869721157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00a33ee741c0f4b26",
              "rtb-0d8ed62600f4afa16"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-s3-endpoint",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-s3-endpoint",
              "Project": "blacktickets"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "vpce-04af200fb233e8ecf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:vpc-endpoint/vpce-0e41676dc80175948",
            "dns_entry": [
              {
                "dns_name": "vpce-0e41676dc80175948-pndc9sv0.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e41676dc80175948-pndc9sv0-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e41676dc80175948-pndc9sv0-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03328902HGQT1CWJ7TAX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e41676dc80175948",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0f2dfcc75b6c12af6",
              "eni-0faebdeac0eddb531"
            ],
            "owner_id": "091869721157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-067422c4f704caa35"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.132",
                "subnet_id": "subnet-0c1abec4a36d722dc"
              },
              {
                "ipv4": "10.0.12.180",
                "subnet_id": "subnet-06d4d03d4b66828ec"
              }
            ],
            "subnet_ids": [
              "subnet-06d4d03d4b66828ec",
              "subnet-0c1abec4a36d722dc"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-secretsmanager-endpoint",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-secretsmanager-endpoint",
              "Project": "blacktickets"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "vpce-0e41676dc80175948",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:vpc-endpoint/vpce-0c3e5da47db3f590f",
            "dns_entry": [
              {
                "dns_name": "vpce-0c3e5da47db3f590f-kicbetu4.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c3e5da47db3f590f-kicbetu4-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c3e5da47db3f590f-kicbetu4-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02967772HOT5CH0ZJJIL"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z03351348EZZVAVQ10SP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c3e5da47db3f590f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01c08ad0214e71adc",
              "eni-08a39703bc7605f80"
            ],
            "owner_id": "091869721157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-067422c4f704caa35"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.45",
                "subnet_id": "subnet-0c1abec4a36d722dc"
              },
              {
                "ipv4": "10.0.12.143",
                "subnet_id": "subnet-06d4d03d4b66828ec"
              }
            ],
            "subnet_ids": [
              "subnet-06d4d03d4b66828ec",
              "subnet-0c1abec4a36d722dc"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ssm-endpoint",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ssm-endpoint",
              "Project": "blacktickets"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "vpce-0c3e5da47db3f590f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:vpc-endpoint/vpce-08e78ea03cd235d67",
            "dns_entry": [
              {
                "dns_name": "vpce-08e78ea03cd235d67-rz0ptgew.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08e78ea03cd235d67-rz0ptgew-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08e78ea03cd235d67-rz0ptgew-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0576368318MYQ9WIGGM0"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z0296596176J0VUHZ9ZRF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08e78ea03cd235d67",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09d43f19e5ad35fa4",
              "eni-0b329d0beba604409"
            ],
            "owner_id": "091869721157",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-067422c4f704caa35"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.136",
                "subnet_id": "subnet-0c1abec4a36d722dc"
              },
              {
                "ipv4": "10.0.12.185",
                "subnet_id": "subnet-06d4d03d4b66828ec"
              }
            ],
            "subnet_ids": [
              "subnet-06d4d03d4b66828ec",
              "subnet-0c1abec4a36d722dc"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ssmmessages-endpoint",
              "Project": "blacktickets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blacktickets-dev-ssmmessages-endpoint",
              "Project": "blacktickets"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-086a5e59000af6f38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "vpce-08e78ea03cd235d67",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_app",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "private_alb_backend_to_ec2_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:security-group-rule/sgr-04d1142bb50595975",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Backend service traffic to app instances",
            "from_port": 4001,
            "id": "sgr-04d1142bb50595975",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b9537c4caaa723d0",
            "region": "us-east-1",
            "security_group_id": "sg-0b890d97bf0a0c205",
            "security_group_rule_id": "sgr-04d1142bb50595975",
            "tags": null,
            "tags_all": {},
            "to_port": 4004
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "sgr-04d1142bb50595975",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.private_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_app_backend_from_private_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:security-group-rule/sgr-03610ffb6ed37c209",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Backend service traffic from private ALB",
            "from_port": 4001,
            "id": "sgr-03610ffb6ed37c209",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b890d97bf0a0c205",
            "region": "us-east-1",
            "security_group_id": "sg-0b9537c4caaa723d0",
            "security_group_rule_id": "sgr-03610ffb6ed37c209",
            "tags": null,
            "tags_all": {},
            "to_port": 4004
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "sgr-03610ffb6ed37c209",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.private_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_app_frontend_from_public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:security-group-rule/sgr-04ea9a9a6c0a4976f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Frontend traffic from public ALB",
            "from_port": 80,
            "id": "sgr-04ea9a9a6c0a4976f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0825596952b78fc5b",
            "region": "us-east-1",
            "security_group_id": "sg-0b9537c4caaa723d0",
            "security_group_rule_id": "sgr-04ea9a9a6c0a4976f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "sgr-04ea9a9a6c0a4976f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2_app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "private_alb_http_from_ec2_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091869721157:security-group-rule/sgr-064050f236980fb34",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTP from app instances",
            "from_port": 80,
            "id": "sgr-064050f236980fb34",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b9537c4caaa723d0",
            "region": "us-east-1",
            "security_group_id": "sg-0b890d97bf0a0c205",
            "security_group_rule_id": "sgr-064050f236980fb34",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091869721157",
            "id": "sgr-064050f236980fb34",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_app",
            "aws_security_group.private_alb",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}